compat-wireless: update .gitignore
Signed-off-by: Hauke Mehrtens <hauke@hauke-m.de>

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
 drivers
 include
 net
+compat
+udev
 *~
 git-describe
 compat-release
 master-tag
-.compat_autoconf*
-.config.md5
-.config.mk_md5sum.txt
-.tmp_versions
 Module.symvers
 module.order
-patches
 .pc
+
