--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,10 @@ code-metrics.txt
 compat_base_tree
 compat_base_tree_version
 compat_version
-
+.compat_autoconf_compat-*
+.config
+.config.mk_md5sum.txt
+.tmp_versions/
+MAINTAINERS
+modules
+modules.order
