compat-wirless: prefix release files with dot
This prefixes these files with a dot:

compat_base_tree -->         .compat_base_tree
compat_base_tree_version --> .compat_base_tree_version
compat_version -->           .compat_version

Signed-off-by: Luis R. Rodriguez <mcgrof@frijolero.org>

--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,9 @@ Module.symvers
 module.order
 .pc
 code-metrics.txt
-compat_base_tree
-compat_base_tree_version
-compat_version
+.compat_base_tree
+.compat_base_tree_version
+.compat_version
 .compat_autoconf_compat-*
 .config
 .config.mk_md5sum.txt
